--- a/public/index.html
+++ b/public/index.html
@@ -490,7 +490,6 @@
         <h3>해설 참고용 정보</h3>
         <div class="muted">
           - Omission↑: 타겟 놓침(주의 이탈/각성 저하/지속주의 저하 가능)<br/>
-          - Late↑: 눌렀지만 늦음(속도 저하/리듬 붕괴/보수적 처리 가능)<br/>
           - Commission↑: 비타겟 반응(억제 실패/충동/규칙 유지 실패)<br/>
           - MeanRT↑: 처리속도 저하/조심모드/각성 저하 가능<br/>
           - RTV↑: 반응 일관성 붕괴(주의 변동/피로/압박 민감)<br/>
@@ -561,8 +560,8 @@
     // ✅ 이동평균 설정 (45s = 3 bins)
     maWindowBins: 3,
 
-    // ✅ GO 비율 튜닝: B0는 55%, 나머지는 70%
-    goRate: { b0: 0.55, other: 0.70 }
+    // ✅ Go 비율: B0=55%, B1~B4=65%
+    pTarget: { b0: 0.55, bElse: 0.65 }
   };
 
   // =========================================================
@@ -779,7 +778,7 @@
   }
 
   // =========================================================
-  // 단계 규칙 텍스트
+  // 단계 규칙 텍스트 (요청대로 “속도/피드백” 언급 없음)
   // =========================================================
   function stageNameFromBlock(block){
     return `${block + 1}단계`;
@@ -804,16 +803,15 @@
 
   // =========================================================
   // ✅ Stimulus generator
-  // - B0: go=55%
-  // - Others: go=70%
+  // - B0: Go 55%
+  // - B1~B4: Go 65%
   // =========================================================
   function makeStimulus(block){
     const C = "circle", T = "triangle", S = "square";
 
-    const P_TARGET = (block===0) ? CFG.goRate.b0 : CFG.goRate.other;
+    const P_TARGET = (block===0) ? CFG.pTarget.b0 : CFG.pTarget.bElse;
     const isTarget = Math.random() < P_TARGET;
 
-    // non-target pick helper
     const pickOne = (arr)=>arr[Math.floor(Math.random()*arr.length)];
 
     if(block===0){
@@ -886,19 +884,18 @@
       stim: stimPack.stim,
       isTarget: stimPack.isTarget,
       targetDesc: stimPack.targetDesc,
-
-      // response
       tappedAtMs: null,
       rtMs: null,
 
-      // outcome labels
+      // 판단
       isHit: false,
       isCommission: false,
       isOmission: false,
-      isLate: false,              // ✅ NEW: 타겟인데 threshold 밖(늦음)인 케이스만 true
       isAnticipatory: false,
 
-      // extras
+      // ✅ late 로그: 타겟에서만 의미 있게 사용 (non-target은 항상 commission이니 late로 분리 안 함)
+      isLate: false,
+
       extraTapCount: 0,
       extraTapRts: [],
     };
@@ -1092,43 +1089,41 @@
     t.tappedAtMs = nowMs();
     t.rtMs = rt;
 
-    // anticipatory: 아주 빠른 반응(예측/성급)
+    // anticipatory
     if(rt < CFG.anticipatoryMs){
       t.isAnticipatory = true;
+      // non-target anticipatory는 commission으로도 친다(억제 실패)
       if(!t.isTarget) t.isCommission = true;
       return;
     }
 
-    // ✅ threshold 밖 반응 처리
-    if(rt > State.omissionThresholdMs){
-      if(t.isTarget){
-        // 타겟인데 늦음 = omission(결과) + late(원인)
-        t.isOmission = true;
-        t.isLate = true;
-      }else{
-        // 비타겟에서 늦게 누른 건 "억제 실패"로 유지(commission)
-        t.isCommission = true;
-      }
+    // ✅ non-target은 언제 눌러도 commission (late로 분리 X)
+    if(!t.isTarget){
+      t.isCommission = true;
       return;
     }
 
-    // within threshold
-    if(t.isTarget){
-      t.isHit = true;
-      if(t.block===0) State.baselineRTs.push(rt);
-    } else {
-      t.isCommission = true;
+    // ✅ 여기부터는 "타겟" 처리
+    // 늦게 눌렀으면: late 로그 + (omission은 '유효창 내 반응 실패' 의미로 유지)
+    if(rt > State.omissionThresholdMs){
+      t.isLate = true;
+      t.isOmission = true; // 구조적으로 '유효창 내 미반응'으로 정의 유지
+      return;
     }
+
+    // 정상 hit
+    t.isHit = true;
+    if(t.block===0) State.baselineRTs.push(rt);
   }
 
-  // ✅ 진짜 “아예 안 누른” 타겟만 omission 처리
   function finalizeOmissionIfNeeded(trialId){
     const idx = State.trials.findIndex(x=>x.id===trialId);
     if(idx<0) return;
     const t = State.trials[idx];
+
+    // 타겟인데, 유효창 내에 탭이 없으면 omission
     if(t.tappedAtMs===null && t.isTarget){
       t.isOmission = true;
-      // t.isLate는 false 유지
     }
   }
 
@@ -1153,7 +1148,6 @@
 
     const hits = ts.filter(t=>t.isHit).length;
     const omissions = ts.filter(t=>t.isOmission).length;
-    const lates = ts.filter(t=>t.isLate).length;          // ✅ NEW
     const commissions = ts.filter(t=>t.isCommission).length;
     const anticip = ts.filter(t=>t.isAnticipatory).length;
 
@@ -1167,14 +1161,13 @@
 
     const hitRate = targets ? hits/targets : null;
     const omissionRate = targets ? omissions/targets : 0;
-    const lateRate = targets ? lates/targets : 0;         // ✅ NEW
     const commissionRate = nontargets ? commissions/nontargets : 0;
     const anticipRate = total ? anticip/total : 0;
 
     return {
       block, total, targets, nontargets,
-      hits, omissions, lates, commissions, anticip,
-      hitRate, omissionRate, lateRate, commissionRate,
+      hits, omissions, commissions, anticip,
+      hitRate, omissionRate, commissionRate,
       meanRT: m, rtv,
       anticipRate,
       validRTN: validRTs.length
@@ -1231,7 +1224,6 @@
       const total = trials.length;
       const targets = trials.filter(t=>t.isTarget).length;
       const nontargets = total-targets;
-
       const omissions = trials.filter(t=>t.isOmission).length;
       const commissions = trials.filter(t=>t.isCommission).length;
 
@@ -1299,7 +1291,6 @@
             <div>Targets / NonTargets</div><div>${s.targets} / ${s.nontargets}</div>
             <div>Hit rate</div><div>${s.hitRate===null ? "N/A" : fmt(s.hitRate,3)}</div>
             <div>Omission rate</div><div>${showNull ? "NULL" : fmt(s.omissionRate,3)}</div>
-            <div>Late rate</div><div>${showNull ? "NULL" : fmt(s.lateRate,3)}</div>
             <div>Commission rate</div><div>${showNull ? "NULL" : fmt(s.commissionRate,3)}</div>
             <div>Mean RT</div><div>${showNull ? "NULL" : fmtMs(s.meanRT)}</div>
             <div>RTV (SD/Mean)</div><div>${showNull ? "NULL" : (s.rtv===null ? "N/A" : fmt(s.rtv,3))}</div>
@@ -1371,7 +1362,6 @@
     const ctx = canvas.getContext("2d");
     ctx.setTransform(dpr,0,0,dpr,0,0);
 
-    // 축 범위는 values와 ma를 같이 고려
     const pool = [];
     for(const v of values) if(typeof v==="number" && !Number.isNaN(v)) pool.push(v);
     for(const v of ma) if(typeof v==="number" && !Number.isNaN(v)) pool.push(v);
@@ -1441,7 +1431,7 @@
       ctx.stroke();
     }
 
-    // (3) moving average baseline line (✅ 흰색)
+    // (3) moving average baseline line (45초 기준선, ✅ 흰색)
     ctx.strokeStyle = "rgba(255,255,255,0.95)";
     ctx.lineWidth = 2;
     ctx.beginPath();
